--- a/index.html
+++ b/index.html
@@ -8,7 +8,24 @@
   <title>Nouilles</title>
 </head>
 <body>
-
+   <!-- HEADER + NAVBAR   -->
+  <header>
+    <nav class="mainNavbar">
+      <div class="navbarWrapper">
+        <div class="navbarLogo">
+          <p>Nouilles</p>
+        </div>
+        <div class="navbarMenu">
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Portfolio</a>
+          <a href="#">Testimonial</a>
+          <a href="#">Blog</a>
+          <a href="#">Contact</a>
+          <i class="fa-solid fa-xmark navbarCloseIcon"></i>
+        </div>
+      </div>
+    </nav>
   
 </body>
 </html>
