--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
         </div>
       </div>
     </nav>
+    <div class="top">
+      <h1>HI!</h1>
+      <h1>I am Ze</h1>
+      <h1>Barber</h1>
+      <h2>FRONTEND WEB DESIGNER</h2>
+      <a href="#">Visit My Works</a>
+    </div>
+  </header>
   
 </body>
 </html>
