--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <title>Nouilles</title>
 </head>
 <body>
-   <!-- HEADER + NAVBAR   -->
+
+
+  <!-- HEADER + NAVBAR   -->
   <header>
     <nav class="mainNavbar">
       <div class="navbarWrapper">
@@ -26,6 +28,7 @@
         </div>
       </div>
     </nav>
+
     <div class="top">
       <h1>HI!</h1>
       <h1>I am Ze</h1>
@@ -34,6 +37,210 @@
       <a href="#">Visit My Works</a>
     </div>
   </header>
-  
+
+  <section class="profilBlock">
+    <div class="profilWrapper">
+      <div class="profilPhoto">
+        <img src="images/man.png" alt="">
+      </div>
+      <div class="profilText">
+        <p class="profilIntro">Who Am I?</p>
+        <h2 class="profilTitle">About Me</h2>
+        <p class="profilDesc">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quod vel blanditiis inventore, nihil ad beatae commodi eos itaque eius repudiandae soluta explicabo aut eligendi ratione error dolore, dolorum repellat!
+        </p>
+        <a href="#" class="profilBtn">Download CV</a>
+      </div>
+    </div>
+  </section>
+
+  <section class="serviceSection">
+    <div class="serviceHeader">
+      <p class="serviceSubtitle">What I Do?</p>
+      <h2 class="serviceTitle">Service</h2>
+    </div>
+
+    <div class="serviceList">
+      <div class="serviceCard">
+        <img src="images/pencil-case.svg" alt="">
+        <h3>Adipisicing</h3>
+        <div class="serviceOverlay">
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis eos animi ullam voluptatem? Iusto!</p>
+        </div>
+      </div>
+      <div class="serviceCard">
+        <img src="images/responsive.svg" alt="">
+        <h3>Sapiente</h3>
+        <div class="serviceOverlay">
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis eos animi ullam voluptatem? Iusto!</p>
+        </div>
+      </div>
+      <div class="serviceCard">
+        <img src="images/toolbox.svg" alt="">
+        <h3>Placeat</h3>
+        <div class="serviceOverlay">
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis eos animi ullam voluptatem? Iusto!</p>
+        </div>
+      </div>
+      <div class="serviceCard">
+        <img src="images/analytics.svg" alt="">
+        <h3>Iusto</h3>
+        <div class="serviceOverlay">
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis eos animi ullam voluptatem? Iusto!</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="portfolioBlock">
+    <div class="portfolioHeader">
+      <p class="portfolioSubtitle">What I Did?</p>
+      <h2 class="portfolioTitle">Portfolio</h2>
+    </div>
+
+    <div class="portfolioGallery">
+      <img src="images/folio-1.jpg" alt="">
+      <img src="images/folio-2.jpg" alt="">
+      <img src="images/folio-3.jpg" alt="">
+    </div>
+  </section>
+
+  <section class="pricingSection">
+    <div class="pricingHeader">
+      <p class="pricingSubtitle">How Much I Charge?</p>
+      <h2 class="pricingTitle">My Pricing</h2>
+    </div>
+
+    <div class="pricingCards">
+      <div class="pricingCard">
+        <img src="images/scooter.svg" alt="">
+        <h3>Free</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        <p>✕</p>
+        <p class="pricingPrice">€0.00/Month</p>
+        <a href="#" class="pricingBtn">Subscribe</a>
+      </div>
+
+      <div class="pricingCard">
+        <img src="images/shipped.svg" alt="">
+        <h3>Free</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic.</p>
+        <p>✕</p>
+        <p class="pricingPrice">€9.99/Month</p>
+        <a href="#" class="pricingBtn">Subscribe</a>
+      </div>
+
+      <div class="pricingCard">
+        <img src="images/startup.svg" alt="">
+        <h3>Free</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel incidunt nulla culpa!</p>
+        <p class="pricingPrice">€99.9/Month</p>
+        <a href="#" class="pricingBtn">Subscribe</a>
+      </div>
+    </div>
+  </section>
+
+  <section class="purpleTransition">
+    <div class="purpleContent">
+      <div class="purpleText">
+        <h2>Want to work with me?</h2>
+        <p>Always Feel Free to Contact & Hire me</p>
+      </div>
+      <div class="purpleButton">
+        <a href="#">Hire Me</a>
+      </div>
+    </div>
+  </section>
+
+  <section class="testimonialSection">
+    <div class="testimonialHeader">
+      <p class="testimonialSubtitle">What Clients Think About Me?</p>
+      <h2 class="testimonialTitle">Testimonial</h2>
+    </div>
+
+    <div class="testimonialList">
+      <div class="testimonialCard">
+        <img src="images/avatar2.jpg" alt="">
+        <div class="testimonialText">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam minima possimus in culpa eligendi eveniet obcaecati, consequatur illum amet quis asperiores.</p>
+          <h4>Emily Reb</h4>
+        </div>
+      </div>
+
+      <div class="testimonialCard">
+        <img src="images/avatar3.jpg" alt="">
+        <div class="testimonialText">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam minima possimus in culpa eligendi eveniet obcaecati, consequatur illum amet quis asperiores.</p>
+          <h4>Emily Reb</h4>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="blogSection">
+    <div class="blogHeader">
+      <p class="blogSubtitle">Recent Posts ?</p>
+      <h2 class="blogTitle">Blog</h2>
+    </div>
+
+    <div class="blogList">
+      <div class="blogPost">
+        <img src="images/img-1.jpg" alt="">
+        <div class="blogContent">
+          <h3>Consectetur adipisicing elit</h3>
+          <div class="blogMeta">
+            <p><strong>By:</strong> Admin</p>
+            <p><i class="fa-solid fa-heart" style="color:#e63946;"></i> 234</p>
+            <p><i class="fa-solid fa-comment"></i> 123</p>
+          </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam minima possimus in culpa eligendi eveniet obcaecati, consequatur illum amet quis asperiores.</p>
+          <p><strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium.</strong></p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium.</p>
+          <a href="#">Read more >></a>
+        </div>
+      </div>
+
+      <div class="blogPost">
+        <img src="images/img-2.jpg" alt="">
+        <div class="blogContent">
+          <h3>Explicabo illo</h3>
+          <div class="blogMeta">
+            <p><strong>By:</strong> Admin</p>
+            <p><i class="fa-solid fa-heart" style="color:#e63946;"></i> 456</p>
+            <p><i class="fa-solid fa-comment"></i> 264</p>
+          </div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium.</p>
+          <a href="#">Read more >></a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="contactSection">
+    <div class="contactHeader">
+      <p class="contactSubtitle">How can you communicate?</p>
+      <h2 class="contactTitle">Contact Me</h2>
+    </div>
+
+    <div class="contactForm">
+      <textarea placeholder="Write Something"></textarea>
+      <button type="submit">Send Message</button>
+    </div>
+  </section>
+
+  <footer class="footerSection">
+    <div class="footerContent">
+      <p class="footerCopyright">Copyright 2025 © DevCRUD</p>
+      <div class="footerIcons">
+        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+        <a href="#"><i class="fa-brands fa-google-plus-g"></i></a>
+        <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="fa-solid fa-rss"></i></a>
+      </div>
+    </div>
+  </footer>
+
 </body>
 </html>
